# supabase-storage-rust

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: base.rs  get_object.rs
src/: build.rs  config.rs  lib.rs  model.rs
src/model/: bucket.rs  errors.rs  object.rs  options.rs
