[package]
name = "supabase-storage"
authors = ["tthefux@gmail.com"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thefux/storage-rs"
description = """
🦀 client library to interact with supabase storage 🦀
"""

keywords = ["supabase-storage", "api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
dotenv = "0.15"
envy = "0.4.2"
derive_more = "0.99"
url = "2.4"
mime_guess = "2.0"

